--- a/red-bicicletas/views/bicicletas/index.pug
+++ b/red-bicicletas/views/bicicletas/index.pug
@@ -1,6 +1,8 @@
 extends ../layout
 
 block content
+    a(href='/bicicletas/create') Nueva Bicicleta
+
     table.table
         thead
             tr
@@ -8,6 +10,8 @@ block content
                 th(scope='col') Color
                 th(scope='col') Modelo
                 th(scope='col') Ubicación
+                th(scope='col') 
+                th(scope='col') 
         tbody
             each bici in bicis
                 tr
@@ -15,3 +19,10 @@ block content
                     td= bici.color
                     td= bici.modelo
                     td= bici.ubicacion
+                    td
+                        a(href = 'bicicletas/' + bici.id + '/update') Editar
+                    td
+                        form.inline(method='post' action='bicicletas/' + bici.id + '/delete')
+                            input(type="hidden" name='id' value=bici.id)
+                            button.link-button(type='submit' name='submit_param' value='submit_value' class='btn') 
+                                = 'Eliminar'
