--- a/red-bicicletas/views/bicicletas/index.pug
+++ b/red-bicicletas/views/bicicletas/index.pug
@@ -12,6 +12,8 @@ block content
                 th(scope='col') Ubicación
                 th(scope='col') 
                 th(scope='col') 
+                th(scope='col')
+
         tbody
             each bici in bicis
                 tr
@@ -20,9 +22,12 @@ block content
                     td= bici.modelo
                     td= bici.ubicacion
                     td
-                        a(href = 'bicicletas/' + bici.id + '/update') Editar
+                    a(href= 'bicicletas/' + bici.id + '/show') Mostrar
                     td
-                        form.inline(method='post' action='bicicletas/' + bici.id + '/delete')
-                            input(type="hidden" name='id' value=bici.id)
-                            button.link-button(type='submit' name='submit_param' value='submit_value' class='btn') 
-                                = 'Eliminar'
+                    a(href= 'bicicletas/' + bici.id + '/update') Editar
+
+                    td
+                    form.inline(method='post' action='bicicletas/' + bici.id + '/delete')
+                        input(type='hidden' name='id' value=bici.id)
+                        button.link-button(type='submit' name='submit_param' value='submit_value' class='btn')
+                        ='Eliminar'
