--- a/red-bicicletas/views/bicicletas/index.pug
+++ b/red-bicicletas/views/bicicletas/index.pug
@@ -11,21 +11,17 @@ block content
                 th(scope='col') Modelo
                 th(scope='col') Ubicación
                 th(scope='col') 
-                th(scope='col') 
                 th(scope='col')
 
         tbody
             each bici in bicis
                 tr
-                    th(scope='row')= bici.id
+                    th(scope='row')= bici.code
                     td= bici.color
                     td= bici.modelo
                     td= bici.ubicacion
                     td
-                    a(href= 'bicicletas/' + bici.id + '/show') Mostrar
-                    td
-                    a(href= 'bicicletas/' + bici.id + '/update') Editar
-
+						a(href= 'bicicletas/' + bici.id + '/update') Editar
                     td
                     form.inline(method='post' action='bicicletas/' + bici.id + '/delete')
                         input(type='hidden' name='id' value=bici.id)
