--- a/red-bicicletas/views/index.pug
+++ b/red-bicicletas/views/index.pug
@@ -33,7 +33,7 @@ block content
             | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
             a(href='https://startbootstrap.com/template-overviews/grayscale/') the preview page
             |                             . The theme is open source, and you can use it for any purpose, personal or commercial.
-      img.img-fluid(src='images/ipad.png' alt='')
+      img.img-fluid(src='assets/img/ipad.png' alt='')
   // Projects
   section#projects.projects-section.bg-light
     .container
