--- a/red-bicicletas/views/layout.pug
+++ b/red-bicicletas/views/layout.pug
@@ -7,7 +7,7 @@ html
     meta(name='description' content='')
     meta(name='author' content='')
 
-    link(rel='icon' type='image/x-icon' href='/images/favicon.ico')
+    link(rel='icon' type='image/x-icon' href='/assets/img/favicon.ico')
 
     // Font Awesome icons (free version)
     script(src='https://use.fontawesome.com/releases/v5.13.0/js/all.js' crossorigin='anonymous')
