--- a/views/usuarios/index.pug
+++ b/views/usuarios/index.pug
@@ -1,34 +1,31 @@
-extends ../includes/layout_bici
+extends ../layout
 
 block content
-  
-  div.container
-    a.btn.btn-success(href='/usuarios/create') Nuevo Usuario
+  a.btn.btn-success(href="/usuarios/create") Nuevo Usuario
+  |&nbsp;
+  a.btn.btn-link(href="/") Volver
+  br
+  br
 
-    br
-    br
-    br
-
-    table.table
-      thead
+  table.table
+    thead
+      tr
+        th(scope="col") #
+        th(scope="col") Nombre
+        th(scope="col") Email
+        th(scope="col") Verificado
+        th(scope="col") 
+        th(scope="col") 
+    tbody
+      each usuario in usuarios
         tr
-          th(scope='col') #
-          th(scope='col') Nombre
-          th(scope='col') Email
-          th(scope='col') Verificado
-          th(scope='col') 
-          th(scope='col') 
-      tbody
-        each usuario, index in usuarios
-          tr
-            td(scope='row')
-              = index
-            td= usuario.nombre
-            td= usuario.email
-            td= usuario.verificado ? 'SI' : 'NO'
-            td 
-              a.btn.btn-primary(href= `usuarios/${usuario.id}/update`) Editar
-            td
-              form.inline(method='post' action=`usuarios/${usuario.id}/delete`)
-                input(type='hidden' name='id' value=usuario.id)
-                button.btn.btn-danger(type='submit' name='submit_param' value=usuario.id) Eliminar
+          td(scope="row")= usuario.id
+          td= usuario.nombre
+          td= usuario.email
+          td= usuario.verificado ? 'SI' : 'NO'
+          td
+            a.btn(href=`/usuarios/${ usuario.id }/update`) Editar
+          td
+            form.inline(action=`/usuarios/${ usuario.id }/delete` method="post")
+              input(type="hidden" name="id" value= usuario.id)
+              input.btn.btn-danger(type="submit" name="submit_param" value="Eliminar")
