--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,26 +1,34 @@
 doctype html
 html
   head
-    title= title
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description' content='')
     meta(name='author' content='')
-
-    link(rel='icon' type='image/x-icon' href='/assets/img/favicon.ico')
-
+    title Red Bicicletas
+    link(rel='icon' type='image/x-icon' href='assets/img/favicon.ico')
     // Font Awesome icons (free version)
     script(src='https://use.fontawesome.com/releases/v5.13.0/js/all.js' crossorigin='anonymous')
-
     // Google fonts
     link(href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i' rel='stylesheet')
-
     // Core theme CSS (includes Bootstrap)
-    link(rel='stylesheet', href='/stylesheets/styles.css')  
+    link(href='/css/styles.css' rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet' href='https://unpkg.com/leaflet@1.7.1/dist/leaflet.css' integrity='sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==' crossorigin='')
-    
-    script(src='https://unpkg.com/leaflet@1.7.1/dist/leaflet.js' integrity='sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==' crossorigin='')
+    link(rel='stylesheet' href='https://unpkg.com/leaflet@1.6.0/dist/leaflet.css' integrity='sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==' crossorigin='')
+
   body
-    block content
+    #page-top
+      block content
+    // Bootstrap core JS
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js')
+    // Third party plugin JS
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js')
+    // Core theme JS
+    // Make sure you put this AFTER Leaflet's CSS
+    script(src='https://unpkg.com/leaflet@1.6.0/dist/leaflet.js' integrity='sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==' crossorigin='')
+
+    script(src='/js/scripts.js')
+    script(src='/js/map.js')
+
