--- a/views/session/forgotPassword.pug
+++ b/views/session/forgotPassword.pug
@@ -1,24 +1,23 @@
-link#bootstrap-css(href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css")
-script(scr='//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js')
-script(scr='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js')
-
 head
-  link#bootstrap-css(href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css")
-  script(scr='//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js')
-  script(scr='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js')
-  link(rel="stylesheet", href="../../stylesheets/login.css")
+  link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css' integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z' crossorigin='anonymous')
+  script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
+  script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js' integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN' crossorigin='anonymous')
+  script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js' integrity='sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV' crossorigin='anonymous')
+
+  link(rel='stylesheet', href='../../stylesheets/login.css')
 
 body#LoginForm
   .container
     .login-form
       .main-div
         .panel
-          if info && info.message
-            div.alert.alert-danger
-              = info.message
+          if info && info.message 
+            div.alert.alert-danger= info.message
+
           h2 Recuperación de password
-          p Por favor, ingrese su email y le enviaremos a esa cuenta las instrucciones
-        form#Login(action="/forgotPassword" method='post')
+          p Por favor, ingrese su email y le enviaremos a esa cuenta las instrucciones de reseteo de password
+
+        form#Login(action='/forgotPassword' method='post')
           .form-group
-            input#email.form-control(type='email' placeholder='Email Addres' name="email")
-          button.btn.btn-primary(type='submit') Resetar
+            input#email.form-control(type='email' placeholder='Email Address' name="email")
+            button.btn.btn-primary(type='submit') Resetear
