--- a/views/session/login.pug
+++ b/views/session/login.pug
@@ -1,12 +1,10 @@
-link#bootstrap-css(href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet")
-script(src='//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js')
-script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js')
-
 head
-  link#bootstrap-css(href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet")
-  script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js')
-  script(src='//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js')
-  link(rel="stylesheet", href="../stylesheets/login.css")
+  link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css' integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z' crossorigin='anonymous')
+  script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
+  script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js' integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN' crossorigin='anonymous')
+  script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js' integrity='sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV' crossorigin='anonymous')
+
+  link(rel='stylesheet' href='../../stylesheets/login.css')
   meta(name='google-site-verification' content='pxOa2Qv7Wq0cQ78SbERxoOVDxJ-XbKHZL8rvLmki3xs')
 
 body#LoginForm
@@ -14,21 +12,20 @@ body#LoginForm
     .login-form
       .main-div
         .panel
-          if info && info.message
-            div.alert.alert-danger
-              = info.message
+          if info && info.message 
+            div.alert.alert-danger= info.message
+
           h2 Admin Login
-          p Por favor, ingrese su email y clave
-        form#Login(action="/login" method='post')
+          p Por favor, ingrese su email and password
+
+        form#Login(action='/login' method='post')
           .form-group
-            input#username.form-control(type="email" placeholder='Email Addres' name='email')
+            input#username.form-control(type='email' placeholder='Email Address' name="username")
           .form-group
-            input#password.form-control(type="password" placeholder='Password' name='password' )
+            input#password.form-control(type='password' placeholder='Password' name="password")
           .forgot
-            a(href="/forgotPassword") Olvidé mi password
-          a(href="/auth/google")  Log In con Google
-          br
-          a(href="/auth/facebook")  Log In con Facebook
+            a(href='/forgotPassword') Olvidé mi password
+            hr
+            a(href='/auth/google') Log In con Google
+
           button.btn.btn-primary(type='submit') Login
-        
-        a.btn.btn-secondary(href="/usuarios")  Register
