--- a/views/session/resetPassword.pug
+++ b/views/session/resetPassword.pug
@@ -1,36 +1,34 @@
-link#bootstrap-css(href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css")
-script(scr='//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js')
-script(scr='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js')
-
 head
-  link#bootstrap-css(href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css")
-  script(scr='//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js')
-  script(scr='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js')
-  link(rel="stylesheet", href="../../stylesheet/login.css")
+  link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css' integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z' crossorigin='anonymous')
+  script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
+  script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js' integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN' crossorigin='anonymous')
+  script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js' integrity='sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV' crossorigin='anonymous')
+
+  link(rel='stylesheet', href='../../stylesheets/login.css')
 
 body#LoginForm
   .container
     .login-form
-      .main-dev
+      .main-div
         .panel
-          if info && info.message
-            div.alert.alert-danger
-              = info.message
-          h2 Cambio de password
+          if info && info.message 
+            div.alert.alert-danger= info.message
+
+          h2 Cambio de Password
           p Por favor, ingrese su clave
-        form#Login(action="/resetPassword" method='post')
-          input#email(type='hidden' name='email' value= user.email)
+
+        form#Login(action='/resetPassword' method='post')
+          input#email(type='hidden' name='email' value= usuario.email)
+
           .form-group
-            label(for='pwd') Password:
-            input#pwd.form-control(type='password' name='password' class= errors.password ? 'is-invalid': '')
+            label(for='pwd') Password: 
+            input#pwd.form-control(type='password' name='password' class= errors.password ? 'is-invalid' : '')
             if errors.password
-              samll#passwordHelp.text-danger
-                = errors.password.message
+              small#passwordHelp.text-danger= errors.password.message  
           .form-group
-            label(for='confirm_pwd') Confirmar password:
-            input#confirm_pwd.form-control(type='confirm_password' name='confirm_password' class= errors.confirm_password ? 'is-invalid': '')
+            label(for='confirm_pwd') Confirmar Password: 
+            input#confirm_pwd.form-control(type='password' name='confirm_password' class= errors.confirm_password ? 'is-invalid' : '')
             if errors.confirm_password
-              samll#confirm_passwordHelp.text-danger
-                = errors.confirm_password.message
-          button.btn.btn-primary(type='submit') Login
-          
+              small#confirm_passwordHelp.text-danger= errors.confirm_password.message  
+
+          button.btn.btn-primary(type='submit') Guardar
