agrego login con facebook y correcciones

--- a/views/session/login.pug
+++ b/views/session/login.pug
@@ -27,5 +27,7 @@ body#LoginForm
             a(href='/forgotPassword') Olvidé mi password
             hr
             a(href='/auth/google') Log In con Google
+            hr
+            a(href="/api/auth/facebook_token") Log In con Facebook            
 
           button.btn.btn-primary(type='submit') Login
