--- a/views/session/resetPassword.pug
+++ b/views/session/resetPassword.pug
@@ -1,34 +1,32 @@
+
+script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
+script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js' integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN' crossorigin='anonymous')
+script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js' integrity='sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV' crossorigin='anonymous')
+
 head
-  link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css' integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z' crossorigin='anonymous')
-  script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
-  script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js' integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN' crossorigin='anonymous')
-  script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js' integrity='sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV' crossorigin='anonymous')
+    link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css' integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z' crossorigin='anonymous')
+    link(href='/stylesheets/login.css' rel='stylesheet')
 
-  link(rel='stylesheet', href='../../stylesheets/login.css')
-
-body#LoginForm
-  .container
-    .login-form
-      .main-div
-        .panel
-          if info && info.message 
-            div.alert.alert-danger= info.message
-
-          h2 Cambio de Password
-          p Por favor, ingrese su clave
-
-        form#Login(action='/resetPassword' method='post')
-          input#email(type='hidden' name='email' value= usuario.email)
-
-          .form-group
-            label(for='pwd') Password: 
-            input#pwd.form-control(type='password' name='password' class= errors.password ? 'is-invalid' : '')
-            if errors.password
-              small#passwordHelp.text-danger= errors.password.message  
-          .form-group
-            label(for='confirm_pwd') Confirmar Password: 
-            input#confirm_pwd.form-control(type='password' name='confirm_password' class= errors.confirm_password ? 'is-invalid' : '')
-            if errors.confirm_password
-              small#confirm_passwordHelp.text-danger= errors.confirm_password.message  
-
-          button.btn.btn-primary(type='submit') Guardar
+block content
+    .container
+        .row
+            .col-sm-9.col-md-7.col-lg-5.mx-auto
+                .card.card-signin.my-5
+                    .card-body
+                        h5.card-title.text-center Reset Password
+                        if err
+                            .alert.alert-danger(role='alert')
+                                | #{err.message}
+                        p Hello #{userName}, Recover your password
+                        form.form-signin(action=`/resetPassword/${token}` method="post")
+                            input(type='text' hidden="true" name='nameUser' value=`${userName}`)
+                            .form-label-group
+                                input#username.form-control(type='password' placeholder='New password' name='newPassword' required='' autofocus='')
+                                label(for='username') New password
+                            .form-label-group
+                                input#password.form-control(type='password' placeholder='Confirm password' name='confirmNewPassword'  required='')
+                                label(for='password') Confirm Password
+                            button.btn.btn-lg.btn-primary.btn-block.text-uppercase(type='submit') Reset Password
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.js')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
+    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js")
