--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,93 +1,126 @@
-body#LoginForm {
-    background-image: url("https://hdwallsource.com/img/2014/9/blur-26347-27038-hd-wallpapers.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    padding: 10px;
+:root {
+  --input-padding-x: 1.5rem;
+  --input-padding-y: 0.75rem;
 }
 
-.form-heading {
-    color: #fff;
-    font-size: 23px;
+.login,
+.image {
+  min-height: 100vh;
 }
 
-.panel h2 {
-    color: #444444;
-    font-size: 18px;
-    margin: 0 0 8px 0;
+.bg-image {
+  background-image: url('https://source.unsplash.com/WEQbe2jBg40/600x1200');
+  background-size: cover;
+  background-position: center;
 }
 
-.panel p {
-    color: #777777;
-    font-size: 14px;
-    margin-bottom: 30px;
-    line-height: 24px;
+.login-heading {
+  font-weight: 300;
 }
 
-.login-form .form-control {
-    background: #f7f7f7 none repeat scroll 0 0;
-    border: 1px solid #d4d4d4;
-    border-radius: 4px;
-    font-size: 14px;
-    height: 50px;
-    line-height: 50px;
+.btn-login {
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  padding: 0.75rem 1rem;
+  border-radius: 2rem;
 }
 
-.main-div {
-    background: #ffffff none repeat scroll 0 0;
-    border-radius: 2px;
-    margin: 10px auto 30px;
-    max-width: 38%;
-    padding: 50px 70px 70px 71px;
+.form-label-group {
+  position: relative;
+  margin-bottom: 1rem;
 }
 
-.login-form .form-group {
-    margin-bottom: 10px;
+.form-label-group>input,
+.form-label-group>label {
+  padding: var(--input-padding-y) var(--input-padding-x);
+  height: auto;
+  border-radius: 2rem;
 }
 
-.login-form {
-    text-align: center;
+.form-label-group>label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin-bottom: 0;
+  /* Override default `<label>` margin */
+  line-height: 1.5;
+  color: #495057;
+  cursor: text;
+  /* Match the input under the label */
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  transition: all .1s ease-in-out;
 }
 
-.forgot a {
-    color: #777777;
-    font-size: 14px;
-    text-decoration: underline;
+.form-label-group input::-webkit-input-placeholder {
+  color: transparent;
 }
 
-.login-form .btn.btn-primary {
-    background: #f0ad4e none repeat scroll 0 0;
-    border-color: #f0ad4e;
-    color: #ffffff;
-    font-size: 14px;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    padding: 0;
+.form-label-group input:-ms-input-placeholder {
+  color: transparent;
 }
 
-.forgot {
-    text-align: left;
-    margin-bottom: 30px;
+.form-label-group input::-ms-input-placeholder {
+  color: transparent;
 }
 
-.botto-text {
-    color: #ffffff;
-    font-size: 14px;
-    margin: auto;
+.form-label-group input::-moz-placeholder {
+  color: transparent;
 }
 
-.login-form .btn.btn-primary.reset {
-    background: #ff9900 none repeat scroll 0 0;
+.form-label-group input::placeholder {
+  color: transparent;
 }
 
-.back {
-    text-align: left;
-    margin-top: 10px;
+.form-label-group input:not(:placeholder-shown) {
+  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-bottom: calc(var(--input-padding-y) / 3);
 }
 
-.back a {
-    color: #444444;
-    font-size: 13px;
-    text-decoration: none;
+.form-label-group input:not(:placeholder-shown)~label {
+  padding-top: calc(var(--input-padding-y) / 3);
+  padding-bottom: calc(var(--input-padding-y) / 3);
+  font-size: 12px;
+  color: #777;
+}
+
+.btn-google {
+  color: white;
+  background-color: #ea4335;
+}
+
+.btn-facebook {
+  color: white;
+  background-color: #3b5998;
+}
+font-size: 0.9rem;
+letter-spacing: 0.05rem;
+padding: 0.75rem 1rem;
+border-radius: 2rem;
+
+/* Fallback for Edge
+-------------------------------------------------- */
+
+@supports (-ms-ime-align: auto) {
+  .form-label-group>label {
+    display: none;
+  }
+  .form-label-group input::-ms-input-placeholder {
+    color: #777;
+  }
+}
+
+/* Fallback for IE
+-------------------------------------------------- */
+
+@media all and (-ms-high-contrast: none),
+(-ms-high-contrast: active) {
+  .form-label-group>label {
+    display: none;
+  }
+  .form-label-group input:-ms-input-placeholder {
+    color: #777;
+  }
 }
