--- a/views/index.pug
+++ b/views/index.pug
@@ -13,15 +13,15 @@ block content
           li.nav-item
             a.nav-link.js-scroll-trigger(href='#about') About
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#projects') Bicicletas
+            a.nav-link.js-scroll-trigger(href='#projects') Bicycle
           li.nav-item
             a.nav-link.js-scroll-trigger(href='#signup') Contact
   // Masthead
   header.masthead
     .container.d-flex.h-100.align-items-center
       .mx-auto.text-center
-        h1.mx-auto.my-0.text-uppercase Grayscale
-        h2.text-white-50.mx-auto.mt-2.mb-5 A free, responsive, one page Bootstrap theme created by Start Bootstrap.
+        h1.mx-auto.my-0.text-uppercase Bicycle network
+        h2.text-white-50.mx-auto.mt-2.mb-5 The first online bicycles community.
         a.btn.btn-primary.js-scroll-trigger(href='#about') Get Started
   // About
   section#about.about-section.text-center
@@ -33,12 +33,11 @@ block content
             | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
             a(href='https://startbootstrap.com/template-overviews/grayscale/') the preview page
             |                             . The theme is open source, and you can use it for any purpose, personal or commercial.
-      img.img-fluid(src='assets/img/ipad.png' alt='')
+      img.img-fluid(src='/img/ipad.png' alt='')
   // Projects
-  section#projects.projects-section.bg-light.pt-5.pb-5
+  section#projects.projects-section.bg-light
     .container
-      #mapid
-
+      #main_map
   // Signup
   section#signup.signup-section
     .container
@@ -47,7 +46,7 @@ block content
           i.far.fa-paper-plane.fa-2x.mb-2.text-white
           h2.text-white.mb-5 Subscribe to receive updates!
           form.form-inline.d-flex
-            input#inputEmail.form-control.flex-fill.mr-0.mr-sm-2.mb-3.mb-sm-0(type='email' placeholder='Enter email address...')
+            input#username.form-control.flex-fill.mr-0.mr-sm-2.mb-3.mb-sm-0(type='email' placeholder='Enter email address...')
             button.btn.btn-primary.mx-auto(type='submit') Subscribe
   // Contact
   section.contact-section.bg-black
@@ -85,5 +84,12 @@ block content
   // Footer
   footer.footer.bg-black.small.text-center.text-white-50
     .container Copyright &copy; Your Website 2020
-
-
+  // Bootstrap core JS
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
+  script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js')
+  // Third party plugin JS
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js')
+  // Core theme JS
+  script(src='/javascripts/scripts.js')
+  script(src='https://unpkg.com/leaflet@1.6.0/dist/leaflet.js' integrity='sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==' crossorigin='')
+  script(src='/javascripts/map.js')
