--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,8 +13,8 @@ html
     link(href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i' rel='stylesheet')
     // Core theme CSS (includes Bootstrap)
-    link(href='/css/styles.css' rel='stylesheet')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href='/stylesheets/styles.css' rel='stylesheet')
+    link(href='/stylesheets/style.css' rel='stylesheet')
     link(rel='stylesheet' href='https://unpkg.com/leaflet@1.6.0/dist/leaflet.css' integrity='sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==' crossorigin='')
 
   body
