--- a/views/index.pug
+++ b/views/index.pug
@@ -37,7 +37,7 @@ block content
   // Projects
   section#projects.projects-section.bg-light
     .container
-      #main_map
+      #mapid
   // Signup
   section#signup.signup-section
     .container
@@ -92,4 +92,4 @@ block content
   // Core theme JS
   script(src='/javascripts/scripts.js')
   script(src='https://unpkg.com/leaflet@1.6.0/dist/leaflet.js' integrity='sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==' crossorigin='')
-  script(src='/javascripts/map.js')
+  script(src='/js/map.js')
