--- a/views/index.pug
+++ b/views/index.pug
@@ -4,35 +4,34 @@ block content
   // Navigation
   nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
     .container
-      a.navbar-brand.js-scroll-trigger(href='#page-top') Start Bootstrap
+      a.navbar-brand.js-scroll-trigger(href='#page-top') Red Bicicletas
       button.navbar-toggler.navbar-toggler-right(type='button' data-toggle='collapse' data-target='#navbarResponsive' aria-controls='navbarResponsive' aria-expanded='false' aria-label='Toggle navigation')
         | Menu
         i.fas.fa-bars
       #navbarResponsive.collapse.navbar-collapse
         ul.navbar-nav.ml-auto
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#about') About
+            a.nav-link.js-scroll-trigger(href='#about') Acerca De
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#projects') Bicycle
+            a.nav-link.js-scroll-trigger(href='#projects') Bicicletas
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#signup') Contact
+            a.nav-link.js-scroll-trigger(href='#signup') Contacto
   // Masthead
   header.masthead
     .container.d-flex.h-100.align-items-center
       .mx-auto.text-center
-        h1.mx-auto.my-0.text-uppercase Bicycle network
-        h2.text-white-50.mx-auto.mt-2.mb-5 The first online bicycles community.
-        a.btn.btn-primary.js-scroll-trigger(href='#about') Get Started
+        h1.mx-auto.my-0.text-uppercase Red Bicicletas
+        h2.text-white-50.mx-auto.mt-2.mb-5 La primera comunidad online de ciclistas de Buenos Aires.
+        a.btn.btn-primary.js-scroll-trigger(href='#about') Empezar
   // About
   section#about.about-section.text-center
     .container
       .row
         .col-lg-8.mx-auto
-          h2.text-white.mb-4 Built with Bootstrap 4
+          h2.text-white.mb-4 Red de Bicicletas de Buenos Aires
           p.text-white-50
-            | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            a(href='https://startbootstrap.com/template-overviews/grayscale/') the preview page
-            |                             . The theme is open source, and you can use it for any purpose, personal or commercial.
+            | Fundada en 1895 supo ser la primera asocición de ciclistas de Latinoamerica.
+            | Actualmente cuenta con miles de asociados y es la principal comunidad de ciclistas de la Argentina.
       img.img-fluid(src='/img/ipad.png' alt='')
   // Projects
   section#projects.projects-section.bg-light
@@ -44,10 +43,10 @@ block content
       .row
         .col-md-10.col-lg-8.mx-auto.text-center
           i.far.fa-paper-plane.fa-2x.mb-2.text-white
-          h2.text-white.mb-5 Subscribe to receive updates!
+          h2.text-white.mb-5 Suscribete para recibir novedades!
           form.form-inline.d-flex
-            input#username.form-control.flex-fill.mr-0.mr-sm-2.mb-3.mb-sm-0(type='email' placeholder='Enter email address...')
-            button.btn.btn-primary.mx-auto(type='submit') Subscribe
+            input#username.form-control.flex-fill.mr-0.mr-sm-2.mb-3.mb-sm-0(type='email' placeholder='Ingrese una dirección de email...')
+            button.btn.btn-primary.mx-auto(type='submit') Subscribirse
   // Contact
   section.contact-section.bg-black
     .container
@@ -56,9 +55,9 @@ block content
           .card.py-4.h-100
             .card-body.text-center
               i.fas.fa-map-marked-alt.text-primary.mb-2
-              h4.text-uppercase.m-0 Address
+              h4.text-uppercase.m-0 Dirección
               hr.my-4
-              .small.text-black-50 4923 Market Street, Orlando FL
+              .small.text-black-50 4923Av. Infanta Isabel 410, Buenos Aires
         .col-md-4.mb-3.mb-md-0
           .card.py-4.h-100
             .card-body.text-center
@@ -66,24 +65,25 @@ block content
               h4.text-uppercase.m-0 Email
               hr.my-4
               .small.text-black-50
-                a(href='#!') hello@yourdomain.com
+                a(href='#!') info@red-bicicletas.com
         .col-md-4.mb-3.mb-md-0
           .card.py-4.h-100
             .card-body.text-center
               i.fas.fa-mobile-alt.text-primary.mb-2
-              h4.text-uppercase.m-0 Phone
+              h4.text-uppercase.m-0 Teléfono
               hr.my-4
-              .small.text-black-50 +1 (555) 902-8832
+              .small.text-black-50 +54 (911) 9876-5432
       .social.d-flex.justify-content-center
-        a.mx-2(href='#!')
-          i.fab.fa-twitter
-        a.mx-2(href='#!')
+        a.mx-2(href='https://www.facebook.com/Pymesoft-344613226373837/' target='_blank')
           i.fab.fa-facebook-f
-        a.mx-2(href='#!')
-          i.fab.fa-github
+        a.mx-2(href='https://www.instagram.com/pymesoftarg/' target='_blank')
+          i.fab.fa-instagram          
+        a.mx-2(href='https://www.linkedin.com/company/pymesoft' target='_blank')
+          i.fab.fa-linkedin
   // Footer
   footer.footer.bg-black.small.text-center.text-white-50
-    .container Copyright &copy; Your Website 2020
+    .container Copyright &copy; 
+      a(href='http://www.pymesoft.com.ar' target='_blank') Pymesoft Argentina
   // Bootstrap core JS
   script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
   script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js')
