--- a/views/index.pug
+++ b/views/index.pug
@@ -22,7 +22,7 @@ block content
       .mx-auto.text-center
         h1.mx-auto.my-0.text-uppercase Red Bicicletas
         h2.text-white-50.mx-auto.mt-2.mb-5 La primera comunidad online de ciclistas de Buenos Aires.
-        a.btn.btn-primary.js-scroll-trigger(href='#about') Empezar
+        a.btn.btn-primary.js-scroll-trigger(href='/login') Ingresar
   // About
   section#about.about-section.text-center
     .container
