--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html
     meta(name='description' content='')
     meta(name='author' content='')
     title Red Bicicletas
-    link(rel='icon' type='image/x-icon' href='assets/img/favicon.ico')
+    link(rel='icon' type='image/x-icon' href='../assets/img/bike.png')
     // Font Awesome icons (free version)
     script(src='https://use.fontawesome.com/releases/v5.13.0/js/all.js' crossorigin='anonymous')
     // Google fonts
