--- a/views/session/login.pug
+++ b/views/session/login.pug
@@ -7,6 +7,7 @@ head
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css' integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z' crossorigin='anonymous')
     link(href='https://use.fontawesome.com/releases/v5.8.2/css/all.css' rel='stylesheet')
     link(href='/stylesheets/login.css' rel='stylesheet')
+    link(rel='icon' type='image/x-icon' href='../assets/img/bike.png')
 
 block content
     .container-fluid
