--- a/views/session/resetPassword.pug
+++ b/views/session/resetPassword.pug
@@ -6,6 +6,7 @@ script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.
 head
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css' integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z' crossorigin='anonymous')
     link(href='/stylesheets/login.css' rel='stylesheet')
+    link(rel='icon' type='image/x-icon' href='../assets/img/bike.png')
 
 block content
     .container
