--- a/views/index.pug
+++ b/views/index.pug
@@ -11,9 +11,9 @@ block content
       #navbarResponsive.collapse.navbar-collapse
         ul.navbar-nav.ml-auto
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#about') Acerca De
+            a.nav-link.js-scroll-trigger(href='/login') Ingresar
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#projects') Bicicletas
+            a.nav-link.js-scroll-trigger(href='/usuarios') Usuarios
           li.nav-item
             a.nav-link.js-scroll-trigger(href='#signup') Contacto
   // Masthead
