Arreglo olvido contraseña

--- a/views/session/forgotPassword.pug
+++ b/views/session/forgotPassword.pug
@@ -19,7 +19,7 @@ block content
                             .alert.alert-danger(role='alert')
                                 | #{err}
                         p Please, enter your email to send you the instructions to reset your password.
-                        form.form-signin(action="/login/forgotPassword" method="post")
+                        form.form-signin(action="/forgotPassword" method="post")
                             .form-label-group
                                 input#username.form-control(type='email' name="email" placeholder='Enter your email' required='' autofocus='')
                                 label(for='username') Email
