Traduccion textos recuperacion contraseña

--- a/views/session/forgotPassword.pug
+++ b/views/session/forgotPassword.pug
@@ -14,15 +14,15 @@ block content
             .col-sm-9.col-md-7.col-lg-5.mx-auto
                 .card.card-signin.my-5
                     .card-body
-                        h2.card-title.text-center Password recovery
+                        h2.card-title.text-center Recuperación de contraseña
                         if err
                             .alert.alert-danger(role='alert')
                                 | #{err}
-                        p Please, enter your email to send you the instructions to reset your password.
+                        p Por favor, ingresa tu email para enviarte las instrucciones de recuperación de contraseña.
                         form.form-signin(action="/forgotPassword" method="post")
                             .form-label-group
                                 input#username.form-control(type='email' name="email" placeholder='Enter your email' required='' autofocus='')
                                 label(for='username') Email
-                            button.btn.btn-lg.btn-primary.btn-block.text-uppercase(type='submit') Reset
+                            button.btn.btn-lg.btn-primary.btn-block.text-uppercase(type='submit') Enviar
                             
                                 
