--- a/views/session/forgotPasswordMessage.pug
+++ b/views/session/forgotPasswordMessage.pug
@@ -12,9 +12,9 @@ block content
         .container.text-center
             .row.justify-content-center
                 .col-md-7
-                    h1.font-weight-light.mt-4.text-white Password Recovery
+                    h1.font-weight-light.mt-4.text-white Recuperación de contraseña
                     p.lead.text-white-50
-                        | Hey! Check your email , you will receive the recovery instructions.
+                        | Che! Revisa tu email , recibiras las instrucciones de recuperación.
     //- footer#sticky-footer.py-4.bg-dark.text-white-50
     //-     .container.text-center
     //-         small Copyright &copy; Your Website
