--- a/views/session/resetPassword.pug
+++ b/views/session/resetPassword.pug
@@ -14,20 +14,20 @@ block content
             .col-sm-9.col-md-7.col-lg-5.mx-auto
                 .card.card-signin.my-5
                     .card-body
-                        h5.card-title.text-center Reset Password
+                        h5.card-title.text-center Reiniciar contraseña
                         if err
                             .alert.alert-danger(role='alert')
                                 | #{err.message}
-                        p Hello #{userName}, Recover your password
+                        p Hola #{userName}, Recupera tu contraseña
                         form.form-signin(action=`/resetPassword/${token}` method="post")
                             input(type='text' hidden="true" name='nameUser' value=`${userName}`)
                             .form-label-group
                                 input#username.form-control(type='password' placeholder='New password' name='newPassword' required='' autofocus='')
-                                label(for='username') New password
+                                label(for='username') Nueva contraseña
                             .form-label-group
                                 input#password.form-control(type='password' placeholder='Confirm password' name='confirmNewPassword'  required='')
-                                label(for='password') Confirm Password
-                            button.btn.btn-lg.btn-primary.btn-block.text-uppercase(type='submit') Reset Password
+                                label(for='password') Confirmar contraseña
+                            button.btn.btn-lg.btn-primary.btn-block.text-uppercase(type='submit') Reiniciar contraseña
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.js')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js")
