--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,8 +3,8 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    meta(name='description' content='')
-    meta(name='author' content='')
+    meta(name='description' content='Sitio oficial de la comunidad Red Bicicletas de Buenos Aires')
+    meta(name='author' content='Pymesoft Argentina')
     title Red Bicicletas
     link(rel='icon' type='image/x-icon' href='../assets/img/bike.png')
     // Font Awesome icons (free version)
